--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
+asttokens==2.0.5
 certifi==2024.7.4
 charset-normalizer==3.3.2
-colorama @ file:///C:/b/abs_a9ozq0l032/croot/colorama_1672387194846/work
+colorama==0.4.6
 coloredlogs==15.0.1
-comm @ file:///C:/b/abs_67a8058udb/croot/comm_1709322909844/work
+comm==0.2.1
 contourpy==1.2.1
 cycler==0.12.1
-debugpy @ file:///C:/b/abs_c0y1fjipt2/croot/debugpy_1690906864587/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
+debugpy==1.6.7
+decorator==5.1.1
 dill==0.3.8
-exceptiongroup @ file:///C:/b/abs_c5h1o1_b5b/croot/exceptiongroup_1706031441653/work
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
+exceptiongroup==1.2.0
+executing==0.8.3
 filelock==3.15.4
 flatbuffers==24.3.25
 fonttools==4.53.1
@@ -18,59 +18,62 @@ fsspec==2024.6.1
 humanfriendly==10.0
 idna==3.7
 intel-openmp==2021.4.0
-ipykernel @ file:///D:/bld/ipykernel_1719845595208/work
-ipython @ file:///C:/b/abs_7dmlwmkafn/croot/ipython_1718287997280/work
-jedi @ file:///C:/b/abs_1b8kmj7rrm/croot/jedi_1721058359741/work
+ipykernel==6.29.5
+ipython==8.25.0
+jedi==0.19.1
 Jinja2==3.1.4
-jupyter_client @ file:///C:/b/abs_a6h3c8hfdq/croot/jupyter_client_1699455939372/work
-jupyter_core @ file:///C:/b/abs_beftpbuevw/croot/jupyter_core_1718818307097/work
+jupyter_client==8.6.0
+jupyter_core==5.7.2
 kiwisolver==1.4.5
 lapx==0.5.9.post1
 MarkupSafe==2.1.5
 matplotlib==3.9.1
-matplotlib-inline @ file:///C:/ci/matplotlib-inline_1661934094726/work
+matplotlib-inline==0.1.6
 mkl==2021.4.0
 mpmath==1.3.0
-nest-asyncio @ file:///C:/b/abs_65d6lblmoi/croot/nest-asyncio_1708532721305/work
+nest-asyncio==1.6.0
 networkx==3.3
 numpy==1.26.4
 onnx==1.16.2
 onnxruntime-gpu==1.16.1
 opencv-python==4.10.0.84
-packaging @ file:///C:/b/abs_c3vlh0z4jw/croot/packaging_1720101866539/work
+packaging==24.1
 pandas==2.2.2
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
+parso==0.8.3
 pillow==10.4.0
-platformdirs @ file:///C:/b/abs_b6z_yqw_ii/croot/platformdirs_1692205479426/work
-prompt-toolkit @ file:///C:/b/abs_68uwr58ed1/croot/prompt-toolkit_1704404394082/work
+pip==24.2
+platformdirs==3.10.0
+prompt-toolkit==3.0.43
 protobuf==5.27.3
-psutil @ file:///C:/Windows/Temp/abs_b2c2fd7f-9fd5-4756-95ea-8aed74d0039flsd9qufz/croots/recipe/psutil_1656431277748/work
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
+psutil==5.9.0
+pure-eval==0.2.2
 py-cpuinfo==9.0.0
-Pygments @ file:///C:/b/abs_fay9dpq4n_/croot/pygments_1684279990574/work
+Pygments==2.15.1
 pyparsing==3.1.2
 pyreadline3==3.4.1
-python-dateutil @ file:///C:/b/abs_3au_koqnbs/croot/python-dateutil_1716495777160/work
+python-dateutil==2.9.0.post0
 pytz==2024.1
 pywin32==305.1
 PyYAML==6.0.1
-pyzmq @ file:///C:/b/abs_89aq69t0up/croot/pyzmq_1705605705281/work
+pyzmq==25.1.2
 requests==2.32.3
 scipy==1.14.0
 seaborn==0.13.2
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
+setuptools==72.1.0
+six==1.16.0
+stack-data==0.2.0
 sympy==1.13.0
 tbb==2021.13.0
 torch==2.3.1+cu118
 torchaudio==2.3.1+cu118
 torchvision==0.18.1+cu118
-tornado @ file:///C:/b/abs_7bua0304mj/croot/tornado_1718740122405/work
+tornado==6.4.1
 tqdm==4.66.4
-traitlets @ file:///C:/b/abs_bfsnoxl4pq/croot/traitlets_1718227069245/work
-typing_extensions @ file:///C:/b/abs_0as9mdbkfl/croot/typing_extensions_1715268906610/work
+traitlets==5.14.3
+typing_extensions==4.11.0
 tzdata==2024.1
 ultralytics==8.2.57
 ultralytics-thop==2.0.0
 urllib3==2.2.2
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+wcwidth==0.2.5
+wheel==0.43.0
